// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameList component renders correctly when don't has games 1`] = `
.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    There are no games available, please try again later...
  </h1>
</div>
`;

exports[`GameList component renders correctly when has games 1`] = `
.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    Showing a maximum of 
    24
     games...
  </h1>
  <div />
</div>
`;

exports[`GameList component renders correctly when isLoading 1`] = `
.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    <div
      className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
      <div
        className="ant-spin-text"
      >
        Loading games...
      </div>
    </div>
  </h1>
</div>
`;
